--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 
     <!-- Custom File's Link -->
     <link rel="stylesheet" href="./CSS/styles.css">
-    <link rel="stylesheet" href="./CSS/media.css">
+    <!-- <link rel="stylesheet" href="./CSS/media.css"> -->
 
 </head>
 
 <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="100">
-    <div class="text-center ok" id="preloaderg">
-        <img src="./images/Ripple-1s-264px.gif" alt="Loading...">
+    <div class="text-center ok" id="preloader">
+        <img src="./images/Spinner-7.1s-124px.svg" alt="Loading...">
       </div>
     <!-- Navbar section -->
     <header class="header_wrapper container-fluid">
