--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>Draac</title>
 
-   
+
     <!-- Bootstrap 5 CDN Links -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -28,7 +28,7 @@
 <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="100">
     <div class="text-center ok" id="preloader">
         <img src="./images/Spinner-7.1s-124px.svg" alt="Loading...">
-      </div>
+    </div>
     <!-- Navbar section -->
     <header class="header_wrapper container-fluid">
         <nav class="navbar navbar-expand-lg">
@@ -49,12 +49,10 @@
                         <li class="nav-item">
                             <a class="nav-link" href="./pages/about.html">About</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#rooms">Rooms</a>
-                        </li>
+
                         <li class="nav-item dropdown ">
-                            <a class="nav-link dropdown-toggle" href="#services" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">Services</a>
+                            <a class="nav-link dropdown-toggle" href="./pages/servies.html" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">Services</a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#">Retreat Space</a></li>
                                 <li><a class="dropdown-item" href="#">Lodging</a></li>
@@ -64,17 +62,12 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#team">Team</a>
+                            <a class="nav-link" href="./pages/contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#gallery">Gallery</a>
+                            <a class="nav-link" href="./pages/blog.html">Blog</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#price">Price</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#blog">Blog</a>
-                        </li>
+
                         <li class="nav-item mt-3 mt-lg-0">
                             <a class="main-btn" href="#">Book Now</a>
                         </li>
