--- a/pages/blog.html
+++ b/pages/blog.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Draac</title>
-
-
     <!-- Bootstrap 5 CDN Links -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -15,16 +11,12 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-
     <!-- Custom File's Link -->
     <link rel="stylesheet" href="./CSS/styles.css">
     <!-- <link rel="stylesheet" href="./CSS/media.css"> -->
-
 </head>
-
 <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="100">
     <div class="text-center ok" id="preloader">
         <img src="./images/Spinner-7.1s-124px.svg" alt="Loading...">
@@ -40,18 +32,16 @@
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fas fa-stream navbar-toggler-icon"></i>
                 </button>
-
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav menu-navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/about.html">About</a>
+                            <a class="nav-link" href="../about.html">About</a>
                         </li>
-
                         <li class="nav-item dropdown ">
-                            <a class="nav-link dropdown-toggle" href="./pages/servies.html" role="button"
+                            <a class="nav-link dropdown-toggle" href="../pages/servies.html" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">Services</a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#">Retreat Space</a></li>
@@ -62,7 +52,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/contact.html">Contact</a>
+                            <a class="nav-link" href="../pages/contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./pages/blog.html">Blog</a>
@@ -76,14 +66,8 @@
             </div>
         </nav>
     </header>
-    <!-- Navbar section exit -->
-
-
-
-
-
-
-     <!-- Footer section -->
+ <!-- Navbar section exit -->
+ <!-- Footer section -->
      <section id="contact" class="footer_wrapper mt-3 mt-md-0 pb-0">
         <div class="container pb-3">
             <div class="row">
@@ -145,16 +129,12 @@
         </div>
     </section>
     <!--Footer section exit-->
-
     <!-- Bootstrap 5 JS CDN Links -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
-
     <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-
     <!-- Custom Js Link -->
     <script src="./js/scripts.js"></script>
 </body>
-
 </html>
