--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
 
 </head>
 
-<body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="100">
-    <div class="text-center ok" id="preloader">
-        <img src="./images/Spinner-7.1s-124px.svg" alt="Loading...">
-    </div>
+<body>
     <!-- Navbar section -->
     <header class="header_wrapper container-fluid">
         <nav class="navbar navbar-expand-lg">
@@ -51,7 +48,7 @@
                         </li>
 
                         <li class="nav-item dropdown ">
-                            <a class="nav-link dropdown-toggle" href="./pages/servies.html" role="button"
+                            <a class="nav-link dropdown-toggle" href="" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">Services</a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#">Retreat Space</a></li>
@@ -184,7 +181,7 @@
                         quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius</p>
                     <p>lorum luptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni
                         dolores eos qui ratione voluptatem</p>
-                    <a href="about.html" class="main-btn mt-4">Explore</a>
+                    <a href="./pages/about.html" class="main-btn mt-4">Explore</a>
                 </div>
                 <div class="col-lg-6 mb-4 mb-lg-0 ps-lg-4 text-center">
                     <img src="./images - Copy/dracc22.jpg" class="img-fluid" alt="About Us">
