--- a/pages/contact.html
+++ b/pages/contact.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 
     <!-- Custom File's Link -->
-    <link rel="stylesheet" href="./CSS/styles.css">
+    <link rel="stylesheet" href="../CSS/styles.css">
     <!-- <link rel="stylesheet" href="./CSS/media.css"> -->
 
 </head>
@@ -153,7 +153,7 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
     <!-- Custom Js Link -->
-    <script src="./js/scripts.js"></script>
+    <script src="../js/scripts.js"></script>
 </body>
 
 </html>
