--- a/pages/services.html
+++ b/pages/services.html
@@ -20,15 +20,12 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 
     <!-- Custom File's Link -->
-    <link rel="stylesheet" href="./CSS/styles.css">
+    <link rel="stylesheet" href="../CSS/styles.css">
     <!-- <link rel="stylesheet" href="./CSS/media.css"> -->
 
 </head>
 
 <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="100">
-    <div class="text-center ok" id="preloader">
-        <img src="./images/Spinner-7.1s-124px.svg" alt="Loading...">
-    </div>
     <!-- Navbar section -->
     <header class="header_wrapper container-fluid">
         <nav class="navbar navbar-expand-lg">
@@ -84,8 +81,8 @@
 
 
 
-     <!-- Footer section -->
-     <section id="contact" class="footer_wrapper mt-3 mt-md-0 pb-0">
+    <!-- Footer section -->
+    <section id="contact" class="footer_wrapper mt-3 mt-md-0 pb-0">
         <div class="container pb-3">
             <div class="row">
                 <div class="col-lg-3 col-md-6">
@@ -155,7 +152,7 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
     <!-- Custom Js Link -->
-    <script src="./js/scripts.js"></script>
+    <script src="../js/scripts.js"></script>
 </body>
 
 </html>
