--- a/index.html
+++ b/index.html
@@ -675,41 +675,39 @@
     <section id="contact" class="footer_wrapper mt-3 mt-md-0 pb-0">
         <div class="container pb-3">
             <div class="row">
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-3 col-md-6 col-sm-12">
                     <h5>Hotel Location</h5>
                     <p class="ps-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dignissim erat ut
                         laoreet
                         pharetra....</p>
                     <div class="contact-info">
                         <ul class="list-unstyled">
-                            <li><a href="#"><i class="fa fa-home me-3"></i> No. 96, South City, London</a></li>
-                            <li><a href="#"><i class="fa fa-phone me-3"></i>+1 222 3333</a></li>
-                            <li><a href="#"><i class="fa fa-envelope me-3"></i>info@example.com</a></li>
+                            <li><a href="#"><i class="fa fa-home me-3"></i> DRACC P.O. Box 546, Enugu</a></li>
+                            <li><a href="#"><i class="fa fa-phone me-3"></i>09136188860, 08074003798</a></li>
+                            <li><a href="#"><i class="fa fa-envelope me-3"></i>  ddlgen@yahoo.com</a></li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
-                    <h5>More Links</h5>
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <h5>Links</h5>
                     <ul class="link-widget p-0">
                         <li><a href="#">About Us</a></li>
                         <li><a href="#">Our Office</a></li>
-                        <li><a href="#">Delivery</a></li>
-                        <li><a href="#">Our Store</a></li>
-                        <li><a href="#">Guarantee</a></li>
-                        <li><a href="#">Buy Gift Card</a></li>
-                        <li><a href="#">Return Policy</a></li>
+                        <li><a href="#">Gallery</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Events</a></li>
+                        
                     </ul>
                 </div>
-                <div class="col-lg-3 col-md-6">
-                    <h5>Demo Links</h5>
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <h5>Our Services</h5>
                     <ul class="link-widget p-0">
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Our Office</a></li>
-                        <li><a href="#">Delivery</a></li>
-                        <li><a href="#">Our Store</a></li>
-                        <li><a href="#">Guarantee</a></li>
-                        <li><a href="#">Buy Gift Card</a></li>
-                        <li><a href="#">Return Policy</a></li>
+                        <li><a href="#">Catering</a></li>
+                        <li><a href="#">Lodging</a></li>
+                        <li><a href="#">Laundry</a></li>
+                        <li><a href="#">Conference Hall</a></li>
+                        <li><a href="#">Retreat Space</a></li>
+                       
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6">
@@ -718,12 +716,12 @@
                         <input type="email" class="form-control bg-transparent" placeholder="enter your email here">
                         <button type="submit" class="main-btn rounded-2 mt-3 border-white text-white">Subscribe</button>
                     </div>
-                    <h5>Stay Connected</h5>
+                    <h5>Follow Us</h5>
                     <ul class="social-network d-flex align-items-center p-0">
                         <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                         <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                         <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-                        <li><a href="#"><i class="fab fa-vimeo-v"></i></a></li>
+                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                     </ul>
                 </div>
             </div>
