--- a/pages/contact.html
+++ b/pages/contact.html
@@ -170,10 +170,9 @@
     <!-- Banner section exit -->
 
 
-    <!-- Team section -->
-  
+   
 
-    <section id = "contact" class = "py-4">
+    <!-- <section id = "contact" class = "py-4">
         <div class = "container">
             <div class = "title-wrap">
                 <span class = "sm-title">get in touch with us</span>
@@ -183,9 +182,9 @@
             <div class = "contact-row">
                 <div class = "contact-left">
                     <form class = "contact-form">
-                        <input type = "text" class = "controll" placeholder="Your name">
-                        <input type = "email" class = "controll" placeholder="Your email">
-                        <textarea rows = "4" class = "controll" placeholder="Your message" style = "resize: none;"></textarea>
+                        <input type = "text" class = "control" placeholder="Your name">
+                        <input type = "email" class = "control" placeholder="Your email">
+                        <textarea rows = "4" class = "control" placeholder="Your message" style = "resize: none;"></textarea>
                         <input type = "submit" class = "btn" value = "Send message">
                     </form>
                 </div>
@@ -220,7 +219,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Footer section -->
     <section id="contact" class="footer_wrapper mt-3 mt-md-0 pb-0">
