--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide" style="background-image: url(./imagecompressor/dracc15-min.jpg);">
+                   
                     <div class="slide-caption text-center">
                         <div>
                             <h1>Welcome TO Dracc</h1>
@@ -275,10 +276,10 @@
                             <img src="./images/services/service2.webp" alt="">
                         </div>
                         <div class="tab-pane fade" id="swimming" role="tabpanel">
-                            <img src="images/services/service3.webp" alt="">
+                            <img src="images/services/dracc16 (2).png" alt="">
                         </div>
                         <div class="tab-pane fade" id="conference" role="tabpanel">
-                            <img src="./images/services/service6.webp" alt="">
+                            <img src="./images/services/dracc16.png" alt="">
                         </div>
                     </div>
                     <!--Service Area End-->
@@ -670,6 +671,18 @@
         </div>
     </section>
     <!-- Pricing Section Exit  -->
+    <!--news letter-->
+
+    <section id="news-letter" class="section-p1 section-m1">
+        <div class="news-text">
+          <h4>Subscribe To Our Newsletters</h4>
+          <p>Get Weekly Updates About Our <span>Latest Promotions</span> </p>
+        </div>
+        <div class="form">
+          <input type="text" placeholder="put your email">
+          <button class="normal">Subscribe</button>
+        </div>
+      </section>
 
     <!-- Footer section -->
     <section id="contact" class="footer_wrapper mt-3 mt-md-0 pb-0">
