--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,298 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Draac</title>
-
-
-    <!-- Bootstrap 5 CDN Links -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-
-    <!-- Link Swiper's CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-
-    <!-- Custom File's Link -->
-    <link rel="stylesheet" href="../CSS/styles.css">
-    <!-- <link rel="stylesheet" href="./CSS/media.css"> -->
-
+    <title>Document</title>
 </head>
-
 <body>
-    <!-- Navbar section -->
-    <header class="header_wrapper container-fluid">
-        <nav class="navbar navbar-expand-lg">
-            <div class="container">
-                <a class="navbar-brand" href="#">
-                    <img src="./images/logo (2).png" class="img-fluid" alt="logo">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fas fa-stream navbar-toggler-icon"></i>
-                </button>
-
-                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                    <ul class="navbar-nav menu-navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./pages/about.html">About</a>
-                        </li>
-
-                        <li class="nav-item dropdown ">
-                            <a class="nav-link dropdown-toggle" href="" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">Services</a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Retreat Space</a></li>
-                                <li><a class="dropdown-item" href="#">Lodging</a></li>
-                                <li><a class="dropdown-item" href="#">Hall</a></li>
-                                <li><a class="dropdown-item" href="#">Catering</a></li>
-                                <li><a class="dropdown-item" href="#">Laundry</a></li>
-                            </ul>
-                        </li>
-                        
-                        <li class="nav-item">
-                            <a class="nav-link" href="./pages/blog.html">Blog</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./pages/contact.html">Contact</a>
-                        </li>
-
-                        <li class="nav-item mt-3 mt-lg-0">
-                            <a class="main-btn" href="#">Book Now</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <!-- Navbar section exit -->
-
-    <!-- Banner section -->
-    <section id="home" class="banner_wrapper p-0  container-fluid">
-        <div class="swiper mySwiper">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide" style="background-image: url(./imagecompressor/dracc15-min.jpg);">
-                    <div class="slide-caption text-center">
-                        <div>
-                            <h1>Welcome TO Dracc</h1>
-                            <p>Divine Love Retreat and Conference Center</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="swiper-slide" style="background-image: url(./imagecompressor/dracc10-min.jpg);">
-                    <div class="slide-caption text-center">
-                        <div>
-                            <h1 class="text-red-600">Welcome TO Dracc</h1>
-                            <p>Divine Love Retreat and Conference Center</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="swiper-slide" style="background-image: url(./images/slider/slider2.webp);">
-                    <div class="slide-caption text-center">
-                        <div>
-                            <h1 class="text-red-600">Welcome TO Dracc</h1>
-                            <p>Divine Love Retreat and Conference Center</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="swiper-slide" style="background-image: url(./images/slider/slider1.webp);">
-                    <div class="slide-caption text-center">
-                        <div>
-                            <h1 class="text-red-600">Welcome TO Dracc</h1>
-                            <p>Divine Love Retreat and Conference Center</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="swiper-slide" style="background-image: url(./imagecompressor/dracc12-min.jpg);">
-                    <div class="slide-caption text-center">
-                        <div>
-                            <h1>Welcome TO Dracc</h1>
-                            <p>Divine Love Retreat and Conference Center</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="swiper-slide" style="background-image: url(./imagecompressor/dracc\ 24-min.jpg);">
-                    <div class="slide-caption text-center">
-                        <div>
-                            <h1>Welcome TO Dracc</h1>
-                            <p>Divine Love Retreat and Conference Center</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="swiper-pagination"></div>
-        </div>
-        <div class="container booking-area">
-            <form class="row">
-                <div class="col-lg mb-3 mb-lg-0">
-                    <input type="date" class="form-control" placeholder="Date">
-                </div>
-                <div class="col-lg mb-3 mb-lg-0">
-                    <input type="date" class="form-control" placeholder="Date">
-                </div>
-                <div class="col-lg mb-3 mb-lg-0">
-                    <select class="form-select">
-                        <option selected>Adults</option>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                    </select>
-                </div>
-                <div class="col-lg mb-3 mb-lg-0">
-                    <select class="form-select">
-                        <option selected>Children</option>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                    </select>
-                </div>
-                <div class="col-lg mb-3 mb-lg-0">
-                    <button type="submit" class="main-btn rounded-2 px-lg-3">Check Availability</button>
-                </div>
-            </form>
-        </div>
-    </section>
-    <!-- Banner section exit -->
-
-
-   
-
-    <!-- <section id = "contact" class = "py-4">
-        <div class = "container">
-            <div class = "title-wrap">
-                <span class = "sm-title">get in touch with us</span>
-                <h2 class = "lg-title">contact us</h2>
-            </div>
-
-            <div class = "contact-row">
-                <div class = "contact-left">
-                    <form class = "contact-form">
-                        <input type = "text" class = "control" placeholder="Your name">
-                        <input type = "email" class = "control" placeholder="Your email">
-                        <textarea rows = "4" class = "control" placeholder="Your message" style = "resize: none;"></textarea>
-                        <input type = "submit" class = "btn" value = "Send message">
-                    </form>
-                </div>
-                <div class = "contact-right my-2">
-                    <div class = "contact-item">
-                        <span class = "contact-icon flex">
-                            <i class = "fa fa-phone-alt"></i>
-                        </span>
-                        <div>
-                            <span>Phone</span>
-                            <p class = "text">+01-584-886-009</p>
-                        </div>
-                    </div>
-                    <div class = "contact-item">
-                        <span class = "contact-icon flex">
-                            <i class = "fa fa-map-marked-alt"></i>
-                        </span>
-                        <div>
-                            <span>Address</span>
-                            <p class = "text">102 East 22nd Street, NY</p>
-                        </div>
-                    </div>
-                    <div class = "contact-item">
-                        <span class = "contact-icon flex">
-                            <i class = "fa fa-envelope"></i>
-                        </span>
-                        <div>
-                            <span>Message</span>
-                            <p class = "text">info@tripboss.com</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
-
-    <!-- Footer section -->
-    <section id="contact" class="footer_wrapper mt-3 mt-md-0 pb-0">
-        <div class="container pb-3">
-            <div class="row">
-                <div class="col-lg-3 col-md-6">
-                    <h5>Hotel Location</h5>
-                    <p class="ps-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dignissim erat ut
-                        laoreet
-                        pharetra....</p>
-                    <div class="contact-info">
-                        <ul class="list-unstyled">
-                            <li><a href="#"><i class="fa fa-home me-3"></i> No. 96, South City, London</a></li>
-                            <li><a href="#"><i class="fa fa-phone me-3"></i>+1 222 3333</a></li>
-                            <li><a href="#"><i class="fa fa-envelope me-3"></i>info@example.com</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h5>More Links</h5>
-                    <ul class="link-widget p-0">
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Our Office</a></li>
-                        <li><a href="#">Delivery</a></li>
-                        <li><a href="#">Our Store</a></li>
-                        <li><a href="#">Guarantee</a></li>
-                        <li><a href="#">Buy Gift Card</a></li>
-                        <li><a href="#">Return Policy</a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h5>Demo Links</h5>
-                    <ul class="link-widget p-0">
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Our Office</a></li>
-                        <li><a href="#">Delivery</a></li>
-                        <li><a href="#">Our Store</a></li>
-                        <li><a href="#">Guarantee</a></li>
-                        <li><a href="#">Buy Gift Card</a></li>
-                        <li><a href="#">Return Policy</a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h5>Newsletter</h5>
-                    <div class="form-group mb-4">
-                        <input type="email" class="form-control bg-transparent" placeholder="enter your email here">
-                        <button type="submit" class="main-btn rounded-2 mt-3 border-white text-white">Subscribe</button>
-                    </div>
-                    <h5>Stay Connected</h5>
-                    <ul class="social-network d-flex align-items-center p-0">
-                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-                        <li><a href="#"><i class="fab fa-vimeo-v"></i></a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="container-fluid copyright-section">
-            <p>Copyright <a href="#">Divine Love Retreat and Conference Center</a> All Rights Reserved</p>
-        </div>
-    </section>
-    <!--Footer section exit-->
-
-    <!-- Bootstrap 5 JS CDN Links -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
-
-    <!-- Swiper JS -->
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-
-    <!-- Custom Js Link -->
-    <script src="../js/scripts.js"></script>
+    
 </body>
-
 </html>
