--- a/index.html
+++ b/index.html
@@ -457,107 +457,7 @@
     </section>
     <!-- Gallery Section Exit -->
 
-    <!-- Pricing section -->
-    <section id="price" class="price_wrapper">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 section-title text-center mb-5">
-                    <h6>Best & Affordable Price for you</h6>
-                    <h3>Our Pricing</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="card p-4 text-center rounded-3">
-                        <h5 class="text-decoration-underline mb-4">Economic</h5>
-                        <ul class="list-unstyled">
-                            <li>
-                                <p>Flight Ticket(2)</p>
-                            </li>
-                            <li>
-                                <p>Music Concert (30% Off)</p>
-                            </li>
-                            <li>
-                                <p>Restaurant (Snacks)</p>
-                            </li>
-                            <li>
-                                <p>Face Make(No)</p>
-                            </li>
-                        </ul>
-                        <hr />
-                        <h3>$150<sub class="fs-6 fw-normal">/NIGHT</sub></h3>
-                        <a href="#" class="main-btn">Sign Up</a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="card p-4 text-center rounded-3">
-                        <h5 class="text-decoration-underline mb-4">Economic</h5>
-                        <ul class="list-unstyled">
-                            <li>
-                                <p>Flight Ticket(2)</p>
-                            </li>
-                            <li>
-                                <p>Music Concert (30% Off)</p>
-                            </li>
-                            <li>
-                                <p>Restaurant (Snacks)</p>
-                            </li>
-                            <li>
-                                <p>Face Make(No)</p>
-                            </li>
-                        </ul>
-                        <hr />
-                        <h3>$150<sub class="fs-6 fw-normal">/NIGHT</sub></h3>
-                        <a href="#" class="main-btn">Sign Up</a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="card p-4 text-center rounded-3">
-                        <h5 class="text-decoration-underline mb-4">Economic</h5>
-                        <ul class="list-unstyled">
-                            <li>
-                                <p>Flight Ticket(2)</p>
-                            </li>
-                            <li>
-                                <p>Music Concert (30% Off)</p>
-                            </li>
-                            <li>
-                                <p>Restaurant (Snacks)</p>
-                            </li>
-                            <li>
-                                <p>Face Make(No)</p>
-                            </li>
-                        </ul>
-                        <hr />
-                        <h3>$150<sub class="fs-6 fw-normal">/NIGHT</sub></h3>
-                        <a href="#" class="main-btn">Sign Up</a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="card p-4 text-center rounded-3">
-                        <h5 class="text-decoration-underline mb-4">Economic</h5>
-                        <ul class="list-unstyled">
-                            <li>
-                                <p>Flight Ticket(2)</p>
-                            </li>
-                            <li>
-                                <p>Music Concert (30% Off)</p>
-                            </li>
-                            <li>
-                                <p>Restaurant (Snacks)</p>
-                            </li>
-                            <li>
-                                <p>Face Make(No)</p>
-                            </li>
-                        </ul>
-                        <hr />
-                        <h3>$150<sub class="fs-6 fw-normal">/NIGHT</sub></h3>
-                        <a href="#" class="main-btn">Sign Up</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    
     <!-- Pricing Section Exit  -->
 
     <!-- Pricing section -->
@@ -572,7 +472,7 @@
             <div class="row">
                 <div class="col-md-6 mb-4">
                     <div class="card p-0 border-0 rounded-0">
-                        <img src="images/blog/blog1.webp" alt="">
+                        <img src="images - Copy/dracc10.jpg" alt="">
                         <div class="blog-content bg-white p-4">
                             <h5 class="text-decoration-underline mb-4">Relax Zone</h5>
                             <h6>By Admin - February 18, 2018</h6>
@@ -585,7 +485,7 @@
                 </div>
                 <div class="col-md-6 mb-4">
                     <div class="card p-0 border-0 rounded-0">
-                        <img src="images/blog/blog2.webp" alt="">
+                        <img src="images - Copy/dracc8.jpg" alt="">
                         <div class="blog-content bg-white p-4">
                             <h5 class="text-decoration-underline mb-4">Relax Zone</h5>
                             <h6>By Admin - February 18, 2018</h6>
