--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/services.html" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">Services</a>
+                            <a class="nav-link" href="./pages/services.html" role="button">Services</a>
                             
                         </li>
 
