--- a/pages/about.html
+++ b/pages/about.html
@@ -46,20 +46,20 @@
                             <a class="nav-link " aria-current="page" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href=".about.html">About</a>
+                            <a class="nav-link active" href="#">About</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="./services.html" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">Services</a>
+                            <a class="nav-link" href="services.html" role="button"
+                              >Services</a>
                             
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="./blog.html">Blog</a>
+                            <a class="nav-link" href="blog.html">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./contact.html">Contact</a>
+                            <a class="nav-link" href="contact.html">Contact</a>
                         </li>
 
                         <li class="nav-item mt-3 mt-lg-0">
