--- a/pages/contact.html
+++ b/pages/contact.html
@@ -41,22 +41,22 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav menu-navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/about.html">About</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link" href="./pages/services.html" role="button">Services</a>
-
+                            <a class="nav-link" href="about.html">About</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/blog.html">Blog</a>
+                            <a class="nav-link" href="services.html" role="button">Services</a>
+
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="blog.html">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/contact.html">Contact</a>
+                            <a class="nav-link" href="#">Contact</a>
                         </li>
 
                         <li class="nav-item mt-3 mt-lg-0">
@@ -83,7 +83,7 @@
                     <div class="slide-caption text-center">
                         <div>
                             <h1 class="text-red-600">Welcome TO Dracc</h1>
-                            <p>Get To Know More About Us</p>
+                            <p>We would like to hear from you</p>
                         </div>
                     </div>
                 </div>
@@ -91,7 +91,7 @@
                     <div class="slide-caption text-center">
                         <div>
                             <h1>Welcome TO Dracc</h1>
-                            <p>Get To Know More About Us</p>
+                            <p>We would like to hear from you</p>
                         </div>
                     </div>
                 </div>
@@ -99,7 +99,7 @@
                     <div class="slide-caption text-center">
                         <div>
                             <h1>Welcome TO Dracc</h1>
-                            <p>Get To Know More About Us</p>
+                            <p>We would like to hear from you</p>
                         </div>
                     </div>
                 </div>
@@ -108,12 +108,10 @@
         </div>
     </section>
 
-   
+
 
     <!-- Banner section exit -->
     <div class="containers">
-
-
         <div class="containers">
             <div class="row">
                 <div class="col-sm-12 section-title text-center mb-5">
@@ -125,26 +123,25 @@
                     <div class="address details">
                         <i class="fas fa-map-marker-alt"></i>
                         <div class="topic">Address</div>
-                        <div class="text-one">Surkhet, NP12</div>
-                        <div class="text-two">Birendranagar 06</div>
+                        <div class="text-one">DRACC</div>
+                        <div class="text-two">P O Box 546, Enugu</div>
                     </div>
                     <div class="phone details">
                         <i class="fas fa-phone-alt"></i>
                         <div class="topic">Phone</div>
-                        <div class="text-one">+0098 9893 5647</div>
-                        <div class="text-two">+0096 3434 5678</div>
+                        <div class="text-one">09136188860</div>
+                        <div class="text-two">08074003798</div>
                     </div>
                     <div class="email details">
                         <i class="fas fa-envelope"></i>
                         <div class="topic">Email</div>
-                        <div class="text-one">codinglab@gmail.com</div>
-                        <div class="text-two">info.codinglab@gmail.com</div>
+                        <div class="text-one">ddlgen@yahoo.com</div>
+                        <div class="text-two">ddlgen@yahoo.com</div>
                     </div>
                 </div>
                 <div class="right-side">
                     <div class="topic-text">Send us a message</div>
-                    <p>If you have any work from me or any types of quries related to my tutorial, you can send me
-                        message from here. It's my pleasure to help you.</p>
+                    <p>let us konw how we can serve you better</p>
                     <form action="#">
                         <div class="input-box">
                             <input type="text" placeholder="Enter your name">
