--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
             </div>
         </div>
         <div class="container-fluid copyright-section">
-            <p>Copyright <a href="#">Divine Love Retreat and Conference.</a> All Rights Reserved</p>
+            <p class="ok">Copyright <a href="#">Divine Love Retreat and Conference.</a> All Rights Reserved</p>
         </div>
     </section>
     <!--Footer section exit-->
