--- a/pages/contact.html
+++ b/pages/contact.html
@@ -106,7 +106,7 @@
 
 
     <!-- Banner section exit -->
-    <div class="containers">
+    <div class="containers mt-lg-5 mt-md-5 ">
         <div class="containers">
             <div class="row">
                 <div class="col-sm-12 section-title text-center mb-5">
@@ -156,6 +156,22 @@
         </div>
 
     </div>
+
+    <section id="blog" class="blog_wrapper pb-0">
+
+        <div class="our-partner-slider mt-5">
+            <div class="container swiper our-partner">
+                <div class=" swiper-wrapper">
+                    <div class="swiper-slide"><img src="../images/partners/brand1.webp" alt="#"></div>
+                    <div class="swiper-slide"><img src="../images/partners/brand2.webp" alt="#"></div>
+                    <div class="swiper-slide"><img src="../images/partners/brand3.webp" alt="#"></div>
+                    <div class="swiper-slide"><img src="../images/partners/brand4.webp" alt="#"></div>
+                    <div class="swiper-slide"><img src="../images/partners/brand5.webp" alt="#"></div>
+                    <div class="swiper-slide"><img src="../images/partners/brand6.webp" alt="#"></div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="contact" class="footer_wrapper mt-3 mt-md-0 pb-0">
         <div class="container pb-3">
             <div class="row">
