--- a/pages/contact.html
+++ b/pages/contact.html
@@ -157,9 +157,9 @@
 
     </div>
 
-    <section id="blog" class="blog_wrapper pb-0">
+    <section id="blog" class="blog_wrapper pb-0 mt-0">
 
-        <div class="our-partner-slider mt-5">
+        <div class="our-partner-slider mt-3">
             <div class="container swiper our-partner">
                 <div class=" swiper-wrapper">
                     <div class="swiper-slide"><img src="../images/partners/brand1.webp" alt="#"></div>
