--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                     <div class="card p-0 border-0 rounded-0">
                         <img src="images - Copy/dracc10.jpg" alt="">
                         <div class="blog-content bg-white p-4">
-                            <h5 class="text-decoration-underline mb-4">Relax Zone</h5>
+                            <h5 class="text-decoration-underline mb-4">Conference</h5>
                             <h6>By Admin - February 18, 2018</h6>
                             <p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, nostrum.
                             </p>
@@ -486,7 +486,7 @@
                     <div class="card p-0 border-0 rounded-0">
                         <img src="images - Copy/dracc8.jpg" alt="">
                         <div class="blog-content bg-white p-4">
-                            <h5 class="text-decoration-underline mb-4">Relax Zone</h5>
+                            <h5 class="text-decoration-underline mb-4">First Profession</h5>
                             <h6>By Admin - February 18, 2018</h6>
                             <p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, nostrum.
                             </p>
