--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 section-title text-center mb-5">
-                    <h6>Say Hello TO Our Visiters</h6>
+                    <h6>Say Hello TO Our Visitors</h6>
                     <h3>Our Blog</h3>
                 </div>
             </div>
