--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 </head>
 
 <body>
+<div class="arrow-btn">
+<a href="#"><span class="fas fa-angle-up"></span></a>
+</div>
     <!-- Navbar section -->
     <header class="header_wrapper container-fluid">
         <nav class="navbar navbar-expand-lg">
